Ziro Pay e Modificacoes Visuais

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     
     <div class="container-fluid">
         <div class="row justify-content-center">
-            <div class="card p-3 col-12 col-md-6 col-lg-2">
+            <div class="card p-3 col-12 col-md-6 col-lg-2 col-lg-x">
                 <div class="card-wrapper card1 align-left">
                     <div class="card-ico pb-4">
                         <a href="https://datastudio.google.com/reporting/80d2db67-f8f0-41c8-8669-03f0820e1431"><span class="mbr-iconfont card-icon mbri-user2"></span></a>
@@ -83,7 +83,7 @@
                 </div>
             </div>
 
-            <div class="card p-3 col-12 col-md-6 col-lg-2">
+            <div class="card p-3 col-12 col-md-6 col-lg-2 col-lg-x">
                 <div class="card-wrapper card2 align-left">
                     <div class="card-ico pb-4 align-left">
                         <a href="https://datastudio.google.com/reporting/80d2db67-f8f0-41c8-8669-03f0820e1431"><span class="mbr-iconfont card-icon mobi-mbri-users mobi-mbri"></span></a>
@@ -101,27 +101,26 @@
                 </div>
             </div>
 
-            <div class="card p-3 col-12 col-md-6 col-lg-2">
+            <div class="card p-3 col-12 col-md-6 col-lg-2 col-lg-x">
                 <div class="card-wrapper card3 align-left">
                     <div class="card-ico pb-4 align-left">
-                        <span class="mbr-iconfont card-icon mobi-mbri-globe mobi-mbri"></span>
+                        <a href="https://datastudio.google.com/reporting/49f1ea21-b094-4609-a356-f6b93374d737"><span class="mbr-iconfont card-icon mbri-link"></span></a>
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-white mbr-fonts-style display-7">Ecology</h4>
+                        <h4 class="card-title mbr-white mbr-fonts-style display-7">Ziro Pay</h4>
                         <div class="line-wrap">
                             <div class="line"></div>
                         </div>
                         <p class="mbr-text mbr-white mbr-fonts-style display-4">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        </p>
+                            Informações de Acompanhamento do Ziro Pay</p>
                         <div class="card-link pt-2">
-                            <a href="#"><span class="mbr-iconfont link-ico mobi-mbri-arrow-next mobi-mbri"></span></a>
+                            <a href="https://datastudio.google.com/reporting/49f1ea21-b094-4609-a356-f6b93374d737"><span class="mbr-iconfont link-ico mobi-mbri-arrow-next mobi-mbri"></span></a>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="card p-3 col-12 col-md-6 col-lg-2">
+            <div class="card p-3 col-12 col-md-6 col-lg-2 col-lg-x">
                 <div class="card-wrapper card4 align-left">
                     <div class="card-ico pb-4 align-left">
                         <span class="mbr-iconfont card-icon mobi-mbri-like mobi-mbri"></span>
@@ -141,7 +140,7 @@
                 </div>
             </div>
 
-            <div class="card p-3 col-12 col-md-6 col-lg-2">
+            <div class="card p-3 col-12 col-md-6 col-lg-2 col-lg-x">
                 <div class="card-wrapper card5 align-left">
                     <div class="card-ico pb-4 align-left">
                         <span class="mbr-iconfont card-icon mobi-mbri-protect mobi-mbri"></span>
@@ -161,25 +160,7 @@
                 </div>
             </div>
 
-            <div class="card p-3 col-12 col-md-6 col-lg-2">
-                <div class="card-wrapper card6 align-left">
-                    <div class="card-ico pb-4 align-left">
-                        <span class="mbr-iconfont card-icon mobi-mbri-edit mobi-mbri"></span>
-                    </div>
-                    <div class="card-box">
-                        <h4 class="card-title mbr-white mbr-fonts-style display-7">Education</h4>
-                        <div class="line-wrap">
-                            <div class="line"></div>
-                        </div>
-                        <p class="mbr-text mbr-white mbr-fonts-style display-4">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        </p>
-                        <div class="card-link pt-2">
-                            <a href="#"><span class="mbr-iconfont link-ico mobi-mbri-arrow-next mobi-mbri"></span></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            
 
         </div>
     </div>
