Consulta Marca Amplo

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-2 col-lg-x">
                 <div class="card-wrapper card1 align-left">
                     <div class="card-ico pb-4">
-                        <a href="https://datastudio.google.com/reporting/80d2db67-f8f0-41c8-8669-03f0820e1431"><span class="mbr-iconfont card-icon mbri-user2"></span></a>
+                        <a href="https://datastudio.google.com/embed/reporting/7bbb0ef4-c94d-4c6a-8179-caeeeb4a3347/page/hOYUB"><span class="mbr-iconfont card-icon mbri-touch-swipe"></span></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-white mbr-fonts-style display-7">Consulta Marca</h4>
@@ -77,7 +77,7 @@
                         <p class="mbr-text mbr-white mbr-fonts-style display-4">
                             Consulta Fácil de Comissão, Desconto e Similares</p>
                         <div class="card-link pt-2">
-                            <a href="https://datastudio.google.com/reporting/7bbb0ef4-c94d-4c6a-8179-caeeeb4a3347"><span class="mbr-iconfont link-ico mobi-mbri-arrow-next mobi-mbri"></span></a>
+                            <a href="https://datastudio.google.com/embed/reporting/7bbb0ef4-c94d-4c6a-8179-caeeeb4a3347/page/hOYUB"><span class="mbr-iconfont link-ico mobi-mbri-arrow-next mobi-mbri"></span></a>
                         </div>
                     </div>
                 </div>
